--- a/code/dev/parts/apps/list.html
+++ b/code/dev/parts/apps/list.html
@@ -39,7 +39,7 @@
 </script>
 <script type="text/ng-template" id="videoModal.html">
   <div class="modal-header">
-    <h3 class="modal-title">Video</h3>
+    <h3 class="modal-title">SDK Introduction Video</h3>
   </div>
   <div class="modal-body">
     <youtube-video style="width: 100%; min-height: 20vh;" video-id="model.youtubeId"></youtube-video>
@@ -81,7 +81,7 @@
                   <div class="col-xs-12"></div>
                 </div>
                 <div class="form-group" ng-if="$state.current.data.platform_code == 'iOS'">
-                  <a __href="{{introductionVideoLinks[$state.current.data.platform_code]}}" class="btn btn-download btn-success" ng-disabled="_loading" uib-tooltip="Click to view Introduction Video" __target="_blank" ng-click="onShowVideo($event, {youtubeId:introductionVideoYoutubeIDs[$state.current.data.platform_code]})">
+                  <a __href="{{introductionVideoLinks[$state.current.data.platform_code]}}" class="btn btn-download btn-success" ng-disabled="_loading" uib-tooltip="Click to view SDK Introduction Video" __target="_blank" ng-click="onShowVideo($event, {youtubeId:introductionVideoYoutubeIDs[$state.current.data.platform_code]})">
                     <i class="fa fa-youtube"></i>&nbsp; Introduction Video
                   </a>
                 </div>
