--- a/code/dev/parts/keys/edit.html
+++ b/code/dev/parts/keys/edit.html
@@ -76,6 +76,23 @@
               </div>
             </div>
           </div>
+          <!-- For "reseller" and "revadmin" multiple select accounts (managed_account_ids)-->
+          <div class="form-group" ng-hide="!companies || companies.length == 1"  ng-class="{'has-error': editForm.managedAccountIds.$invalid && editForm.managedAccountIds.$dirty}" ng-if="!_loading && companies.length>0 && (userService.isReseller() || userService.isRevadmin())">
+            <label for="account_id"
+                   class="col-sm-2 control-label">Additional Accounts To Manage</label>
+            <div class="col-sm-4">
+            <span ng-show="!_loading && companies.length==0" class="loader--waite-company" ><i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
+              <ui-select multiple ng-animate-disabled theme="bootstrap" ng-model="key.managed_account_ids" ng-disabled="_loading" style="min-width: 550px;" id="managed_account_ids" name="managedAccountIds">
+                <ui-select-match placeholder="Add account to manage ...">{{$item.companyName}}</ui-select-match>
+                <ui-select-choices repeat="item.id as item in companies | filter: {companyName: $select.search}">
+                  <div ng-bind-html="item.companyName|highlight: $select.search"></div>
+                </ui-select-choices>
+              </ui-select>
+              <div class="error-messages" ng-messages="editForm.accountId.$error" role="alert" ng-messages-multiple>
+                <div ng-messages-include="parts/shared/error-messages.html"></div>
+              </div>
+            </div>
+          </div>
           <div class="form-group">
             <label for="active"
                    class="col-sm-2 control-label"
