Add social authentication (Google)

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -135,6 +135,7 @@
 <script type="text/javascript" src="bower_components/angular-object-diff/dist/angular-object-diff.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.us.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.world.js"></script>
+<script type="text/javascript" src="bower_components/satellizer/dist/satellizer.js"></script>
 <!-- <script type="text/javascript" src="widgets/adf-widget-analytics-proxy-traffic/dist/adf-widget-analytics-proxy-traffic.js"></script> -->
 <!-- endbuild -->
 
