--- a/code/dev/parts/auth/login.html
+++ b/code/dev/parts/auth/login.html
@@ -40,6 +40,28 @@
                 <i class="glyphicon  " ng-class="_loading ? 'glyphicon-refresh spin': 'glyphicon-log-in'"></i> Sign In
               </button>
             </div>
+            <div class="form-group">
+              <hr>
+            </div>
+            <div class="form-group">
+              <div class="row">
+                <div class="col-xs-4 text text-center">
+                  <button ng-disabled="_loading " type="button" class="btn btn-primary btn-info btn-social btn-block" ng-click="authenticate('google')">
+                    <i class="fa fa-google-plus"></i>
+                  </button>
+                </div>
+                <div class="col-xs-4 text text-center">
+                  <button ng-disabled="_loading " type="button" class="btn btn-primary btn-info btn-social btn-block" ng-click="authenticate('github')">
+                    <i class="fa fa-github"></i>
+                  </button>
+                </div>
+                <div class="col-xs-4 text text-center">
+                  <button ng-disabled="_loading " type="button" class="btn btn-primary btn-info btn-social btn-block" ng-click="authenticate('facebook')">
+                    <i class="fa fa-facebook-official"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="form-inline">
             <div class="form-group marl_med">
