Fix modal window buttons

--- a/code/dev/parts/azure-resources/list.html
+++ b/code/dev/parts/azure-resources/list.html
@@ -7,8 +7,7 @@
     <pre>{{model | json}}</pre>
   </div>
   <div class="modal-footer">
-    <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
-    <button class="btn btn-danger" type="button" ng-click="ok()">OK</button>
+    <button class="btn btn-danger" type="button" ng-click="ok()">Close</button>
   </div>
 </script>
 <div class="container-fluid" ui-view="page">
