--- a/code/dev/parts/azure-subscriptions/dialog/change-status.tpl.html
+++ b/code/dev/parts/azure-subscriptions/dialog/change-status.tpl.html
@@ -10,6 +10,6 @@
   </ui-select>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+  <button class="btn btn-info" type="button" ng-click="cancel()">Cancel</button>
   <button class="btn btn-success" type="button" ng-click="ok(editCurrentSubscriptionState)" ng-disabled="!editCurrentSubscriptionState">Save</button>
 </div>
