--- a/code/dev/parts/dashboard/widgets/heatmaps/edit-heatmap.html
+++ b/code/dev/parts/dashboard/widgets/heatmaps/edit-heatmap.html
@@ -5,6 +5,7 @@
   </div>
   <div class="form-group">
     <select class="form-control fixed" ng-model="config.filters.count_last_hours" ng-disabled="!domain">
+      <option value="1">Last 1 Hour</option>
       <option value="6">Last 6 Hours</option>
       <option value="12">Last 12 Hours</option>
       <option value="24">Last 24 Hours</option>
