--- a/code/dev/parts/dashboard/widgets/web-analytics/edit-config-web-analytics-hours.tpl.html
+++ b/code/dev/parts/dashboard/widgets/web-analytics/edit-config-web-analytics-hours.tpl.html
@@ -10,6 +10,7 @@
     <div class="form-group">
       <select class="form-control fixed" ng-model="config.filters.delay" ng-disabled="!domain">
         <option value="1">Last 1 Hour</option>
+        <option value="6">Last 6 Hours</option>
         <option value="12">Last 12 Hours</option>
         <option value="24">Last 24 Hours</option>
       </select>
