--- a/code/dev/parts/reports/charts/fbt-heatmap.html
+++ b/code/dev/parts/reports/charts/fbt-heatmap.html
@@ -6,6 +6,7 @@
       <div class="form-group">
         <select class="form-control fixed"
                 ng-model="delay">
+          <option value="1">Last 1 Hour</option>
           <option value="6">Last 6 Hours</option>
           <option value="12">Last 12 Hours</option>
           <option value="24">Last 24 Hours</option>
