--- a/code/dev/parts/reports/filters/top-objects-filter.html
+++ b/code/dev/parts/reports/filters/top-objects-filter.html
@@ -5,6 +5,7 @@
         <select class="form-control fixed"
                 ng-model="delay">
           <option value="1">Last 1 Hour</option>
+          <option value="6">Last 6 Hours</option>
           <option value="12">Last 12 Hours</option>
           <option value="24">Last 24 Hours</option>
         </select>
