Small language fix in a notice message for account cancellation window

--- a/code/dev/parts/profile/edit-company.html
+++ b/code/dev/parts/profile/edit-company.html
@@ -37,7 +37,7 @@
       </div>
       <!-- isCanBeDeleted = false -->
       <div class="col-sm-12" ng-if="!model.isCanBeDeleted">
-        <p class="text-center">Your RevAPM account has active web domain and/or mobile app and/or dns zone configurations. To ensure that the account cancellation will not affect your end users please review your RevAPM configuration and manually delete the resources before proceeding with account cancellation
+        <p class="text-center">Your RevAPM account has active web domain and/or mobile app and/or DNS zone configurations. To ensure that the account cancellation will not affect your end users please review your RevAPM configuration and manually delete the resources before proceeding with account cancellation.
         </p>
       </div>
     </div>
