--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -244,8 +244,10 @@
           </div>
           <div class="col-md-12 footer-content">
             <a href="{{contactUsLink}}" target="_blank">Contact Us</a>
-            <span class="pull-left copyright">Copyright Rev Software, Inc. 2015-2016</span>
-            <span class="pull-right version">Version {{portalVersion}}/{{apiVersion}} </span>
+            <span class="pull-left copyright">Copyright Rev Software, Inc. 2015-2016
+            <br>Version {{portalVersion}}/{{apiVersion}}
+            </span>
+            <!-- <span class="pull-right version">Version {{portalVersion}}/{{apiVersion}} </span> -->
           </div>
         </div>
       </div>
