Rename  "Add Record" button to "Create Record"

--- a/code/dev/parts/dns_zone_records/new.html
+++ b/code/dev/parts/dns_zone_records/new.html
@@ -117,7 +117,7 @@
             <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel
           </a>
           <button class="btn btn-success" id="create_dns_zone_record" ng-disabled="createForm.$invalid|| _loading" ng-click="createDNSZoneRecord(model,false)">
-            <i class="glyphicon" ng-class="_loading?'glyphicon-refresh spin':'glyphicon-ok'"></i>&nbsp; Add Record
+            <i class="glyphicon" ng-class="_loading?'glyphicon-refresh spin':'glyphicon-ok'"></i>&nbsp; Create Record
           </button>
           <button class="btn btn-success" id="create_dns_zone_record_and_add_more" ng-disabled="createForm.$invalid|| _loading" ng-click="createDNSZoneRecord(model,true);createForm.$setPristine();">
             <i class="glyphicon" ng-class="_loading?'glyphicon-refresh spin':'glyphicon-ok'"></i>&nbsp; Create And Add More
