--- a/code/dev/parts/users/new.html
+++ b/code/dev/parts/users/new.html
@@ -33,7 +33,7 @@
                     <div class="form-group" ng-class="{'has-error': createForm.firstName.$invalid && createForm.firstName.$dirty}">
                         <label for="firstname" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="First name">First Name *</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="firstname" name="firstName" placeholder="First Name" ng-model="model.firstname" ng-disabled="_loading" ng-maxlength="30" ng-pattern="NO_SPECIAL_CHARS" required>
+                            <input type="text" class="form-control" id="firstname" name="firstName" placeholder="First Name" ng-model="model.firstname" ng-disabled="_loading" ng-maxlength="30" ng-pattern="CONTACT_DATA" required>
                             <div class="error-messages" ng-messages="createForm.firstName.$error" role="alert" ng-messages-multiple>
                                 <div ng-messages-include="parts/shared/error-messages.html"></div>
                             </div>
@@ -42,7 +42,7 @@
                     <div class="form-group" ng-class="{'has-error': createForm.lastName.$invalid && createForm.lastName.$dirty}">
                         <label for="lastName" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Last name">Last Name *</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name" ng-model="model.lastname" ng-disabled="_loading" ng-maxlength="30" ng-pattern="NO_SPECIAL_CHARS" required>
+                            <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name" ng-model="model.lastname" ng-disabled="_loading" ng-maxlength="30" ng-pattern="CONTACT_DATA" required>
                             <div class="error-messages" ng-messages="createForm.lastName.$error" role="alert" ng-messages-multiple>
                                 <div ng-messages-include="parts/shared/error-messages.html"></div>
                             </div>
