Add allow “_” character for New Record DNS

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -133,7 +133,7 @@
 <script type="text/javascript" src="bower_components/sweetalert/dist/sweetalert.min.js"></script>
 
 <script type="text/javascript" src="bower_components/angular-object-diff/dist/angular-object-diff.js"></script>
-<script type="text/javascript" src="bower_components/satellizer/dist/satellizer.js"></script> 
+<script type="text/javascript" src="bower_components/satellizer/dist/satellizer.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.us.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.world.js"></script>
 <!-- <script type="text/javascript" src="widgets/adf-widget-analytics-proxy-traffic/dist/adf-widget-analytics-proxy-traffic.js"></script> -->
@@ -193,7 +193,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/shared/validators/validate-domain-name-regular-or-wildcard-domains.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-domain-name.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-origin-server-name.directive.js"></script>
-
+<script type="text/javascript" src="js/portal/shared/validators/validate-dns-record-domain-name-regular-or-wildcard-domains.directive.js"></script>
 <script type="text/javascript" src="js/portal/resources/resources.module.js"></script>
 <script type="text/javascript" src="js/portal/resources/resources.config.js"></script>
 <script type="text/javascript" src="js/portal/resources/resource.factory.js"></script>
