Fix html changes

--- a/code/dev/parts/profile/statements.html
+++ b/code/dev/parts/profile/statements.html
@@ -75,11 +75,10 @@
                     </div>
                     <div class="alert alert-danger" ng-if="!_loading && _error">
                         {{_error.message}}
-                    </div>{{options.dtColumnDefs}}
+                    </div>
                     <table datatable="ng"
-                           dt-options="options.transactionsDtOptions"
+                           dt-options="transactionsDtOptions"
                            dt-instance="dtInstanceTransactions"
-                           dt-column-defs="options.dtColumnDefs"
                            class="table order-column table-striped"
                            ng-if="!_loading && !_error">
                         <thead>
@@ -89,9 +88,6 @@
                                 <p>Operation Type</p>
                             </th>
                             <th>
-                                <p>Date</p>
-                            </th>
-                             <th>
                                 <p>Date</p>
                             </th>
                             <th>
@@ -106,8 +102,6 @@
                             <tr ng-repeat="transaction in transactions">
                                 <td>{{transaction.transaction_type}}</td>
                                 <td>{{transaction.created_at | date : 'MMM d, y h:mm:ss a'}}</td>
-                                <td>{{transaction.created_at | date : 'dd/MM/yyyy h:mm:ss a'}}</td>
-
                                 <td>{{transaction.memo}}</td>
                                 <td>{{transaction.amount_in_cents/100 | currency}}</td>
                             </tr>
