Fix right side content scroll issue

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -39,7 +39,7 @@
   <![endif]-->
 
 </head>
-<body data-ng-app="revapm.Portal">
+<body data-ng-app="revapm.Portal" class="hide-vertical-scroll">
 <toaster-container toaster-options="{'animation-class': 'toast-top-center'}"></toaster-container>
 <div ui-view="layout" class="layout"></div>
 
