Rename 'Mobile Analytics' to 'Apps Analytics'

--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -27,7 +27,7 @@
         <div class="left-menu-start">
           <i class="fa fa-signal"></i>
         </div>
-        Mobile Analytics
+        Apps Analytics
         <i ng-click="expandMenu('index.mobile', $event)" class="pull-right {{ menuExpanded('index.mobile') ? 'fa fa-caret-down' : 'fa fa-caret-up' }}"></i>
       </a>
       <a ui-sref-active="active" ui-sref="index.mobile.traffic" class="side-menu-sub-item">
