--- a/code/dev/parts/logshippers/edit.html
+++ b/code/dev/parts/logshippers/edit.html
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="panel-body">
-        <form class="form-horizontal" name="editForm">
+        <form class="form-horizontal" name="editForm" autocomplete="off">
           <div class="form-group" ng-class="{ 'has-error': editForm.job_name.$invalid && editForm.job_name.$dirty }">
             <label for="job_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Log shipping job name (150 characters max)">Job Name *</label>
             <div class="col-sm-10">
