--- a/code/dev/parts/logshippers/new.html
+++ b/code/dev/parts/logshippers/new.html
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="panel-body">
-        <form class="form-horizontal" ng-submit="createLogShippingJob(model)" name="createForm" novalidate>
+        <form class="form-horizontal" ng-submit="createLogShippingJob(model)" name="createForm" novalidate autocomplete="off">
           <div class="form-group" ng-class="{ 'has-error': createForm.job_name.$invalid && createForm.job_name.$dirty }">
             <label for="job_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Name of the new log shipping job (150 characters max)">Job Name *</label>
             <div class="col-sm-10">
