--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -69,7 +69,7 @@
       <a id="side-menu-sub-item__webApp-cache" ui-sref-active="active" ui-sref="index.webApp.cache" class="side-menu-sub-item">
         <i class="sub-menu-icon fa fa-trash"></i> Purge Cache
       </a>
-      <a ui-sref-active="active" ui-sref="index.webApp.importConfig" class="side-menu-sub-item" ng-if="userService.isReseller() || userService.isRevadmin()">
+      <a ui-sref-active="active" ui-sref="index.webApp.importConfig" class="side-menu-sub-item" ng-if="userService.isRevadmin()">
         <i class="sub-menu-icon fa fa-arrow-right"></i> Upload Config
       </a>
       <!--<a ui-sref="index.webApp.domainConfig" class="side-menu-item">-->
