--- a/code/dev/parts/reports/filters/top-objects-filter.html
+++ b/code/dev/parts/reports/filters/top-objects-filter.html
@@ -3,7 +3,7 @@
     <form class="form-inline">
       <div class="form-group">
         <select class="form-control fixed"
-                ng-model="delay">
+                ng-model="ngFilters.delay">
           <option value="1">Last 1 Hour</option>
           <option value="6">Last 6 Hours</option>
           <option value="12">Last 12 Hours</option>
